# sharq_models

./: .gitignore  alembic.ini  docker-compose.yaml  local.docker-compose.yaml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: 2433affee334_first_revision.py
migrations/: env.py
migrations/versions/: 05d27f5e2096_support_of_timezone.py  099e1f0ead5d_user_creation_rolled_back.py  0ca120595ade_add_is_approved_in_study_info.py  177bfae46760_change_date_to_datetime.py  17e4e184aae5_delete_course_level.py  228c7718acde_statuses.py  22a3f99cd77f_contract_model_updated_promocode_added.py  254503b3227d_change_passport_data_couln.py  336c3f309f7b_add_conttract.py  3eb5d52db910_chagne_passport_data.py  40e525039f42_study_direction.py  4a904572b579_passportdata.py  4d062b077458_test_revision.py  50555fbd2863_add_to_contracts_to_user_id.py  50d8d3343836_change_file_path_to_nulable_true.py  64827cdfccf4_sms_role.py  6a26af0419a6_users_id_added.py  6fa0fec9b844_add_cource_level.py  88d210b57f59_added_image_path.py  9084def14e7d_delete_uniqe_paramentr_from_direction.py  942b16e3dbed_initial_migrations.py  a05327080bc9_remvoded_frg_keys.py  a434f7a18185_user_id.py  add397522353_merge_heads.py  c02f8ddf9415_amo_crm_lead.py  c80adb995e16_add_column_photo.py  dcaa99a56a51_change_date_to_datetime_1.py  deb120a7c21c_change_date_to_datetime_2.py  e50d2bb6117d_update_study_info.py  eee461c251ca_add_date_in_study_info.py  f506787b3961_cange_from_dfulat.py  f8c00c169ef9_add_extra_coulnm_in_study_info.py  (+2 more)
sharq_models/: __init__.py  database.py
sharq_models/alembic/: env.py
(+15 files in other folders)
