[project]
name = "sharqmodel"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.2",
    "asyncpg>=0.30.0",
    "sqlalchemy>=2.0.41",
    "dotenv==0.9.9"
]

[tool.setuptools.packages.find]
include = ["sharq_models*"]
